Added language selection

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -141,6 +141,17 @@
             <div class="row justify-content-around">
                 <div class="col-md-4 text-center">
                     <div class="h5"
+                         i18n>Sprache
+                    </div>
+                    <a href="{{ uri.pathname }}"
+                       class="footer-link"
+                       i18n>Deutsch</a>
+                    - <a href="/en{{ uri.pathname }}"
+                       class="footer-link"
+                       i18n>Englisch</a>
+                    <hr>
+
+                    <div class="h5"
                          i18n>Informationen</div>
                     <ul class="list-unstyled text-small">
                         <li class="m-2"><a
