Fix redirects and links with languages enabled

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -143,10 +143,10 @@
                     <div class="h5"
                          i18n>Sprache
                     </div>
-                    <a href="{{ uri.pathname }}"
+                    <a href="{{ baseurl }}"
                        class="footer-link"
                        i18n>Deutsch</a>
-                    - <a href="/en{{ uri.pathname }}"
+                    - <a href="/en{{ baseurl }}"
                        class="footer-link"
                        i18n>Englisch</a>
                     <hr>
