--- a/power/src/app/fragebogen/surveyjs/preview/preview.component.html
+++ b/power/src/app/fragebogen/surveyjs/preview/preview.component.html
@@ -36,7 +36,7 @@
                         </option>
                         <!--<option *ngFor="let lang of wrapper.survey.getUsedLocales(); index as i"
                                     [ngValue]="lang">
-                                {{ lang }}
+                                {{ languages[lang] }}
                             </option>-->
                     </select>
                 </div>
