--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -12,7 +12,7 @@
             </svg>
             <span i18n>&nbsp;Formulare</span>
             <div class="float-right">
-                <input class="form-control" id="form-title-search" type="text" placeholder="Titel" aria-label="Titel"
+                <input class="form-control" id="form-title-search" type="text" placeholder="Titel" i18n-placeholder aria-label="Titel"
                     (blur)="title = $event.target.value; update(false)"
                     (keydown.enter)="title = $event.target.value; update(false)">
             </div>
