--- a/power/src/app/bodenrichtwert/bodenrichtwert-liste/bodenrichtwert-liste.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-liste/bodenrichtwert-liste.component.html
@@ -2,9 +2,9 @@
     <table class="table table-bordered">
         <thead>
         <tr>
-            <th>Stichtag</th>
-            <th>Nutzung</th>
-            <th>Wert</th>
+            <th scope="col">Stichtag</th>
+            <th scope="col">Nutzung</th>
+            <th scope="col">Wert</th>
         </tr>
         </thead>
         <tbody>
