--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -50,7 +50,6 @@
     <power-geosearch [class.d-none]="!searchActive" (selectResult)="flyTo($event)"></power-geosearch>
 
     <div class="height-minus-header-map" [class.small]="flurstueckSelection.size > 0" #map>
-        <a class="anchor"></a>
 
         <mgl-map
             id="map"
@@ -117,14 +116,16 @@
                 </ng-template>
                 <ng-template ngbPanelContent>
                     <table class="table table-bordered">
-                        <tr>
-                            <th>Amtliche Fläche</th>
-                            <th>Wert</th>
-                        </tr>
-                        <tr *ngFor="let feature of this.flurstueckSelection | keyvalue">
-                            <td>{{feature.value.properties.amtlicheflaeche | number }} m&#178;</td>
-                            <td>{{feature.value.properties.wert | currency:'EUR':"symbol" : '1.2-2'}}</td>
-                        </tr>
+                        <tbody>
+                            <tr>
+                                <th scope="col">Amtliche Fläche</th>
+                                <th scope="col">Wert</th>
+                            </tr>
+                            <tr *ngFor="let feature of this.flurstueckSelection | keyvalue">
+                                <td>{{feature.value.properties.amtlicheflaeche | number }} m&#178;</td>
+                                <td>{{feature.value.properties.wert | currency:'EUR':"symbol" : '1.2-2'}}</td>
+                            </tr>
+                        </tbody>
                     </table>
 
                     <h3>
