--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -107,10 +107,12 @@
 
     <mgl-map
         (click)="onMapClickEvent($event)"
-        [style]="MAP_STYLE_URL"
-        [trackResize]="true"
+        (load)="loadMap($event)"
         [bounds]="bounds"
-        (load)="loadMap($event)">
+        [maxZoom]="20"
+        [minZoom]="5"
+        [style]="MAP_STYLE_URL"
+        [trackResize]="true">
 
         <mgl-geojson-source id="ndsgeojson" [data]="baseUrl+'/assets/niedersachsen.geojson'"></mgl-geojson-source>
 
