Bodenwerte: Show usage hint before interaction

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -112,7 +112,7 @@
                 <ng-template ngbPanelHeader>
                     <div>
                         <div class="text-center">
-                            <h5 class="m-0 mx-center">Wählen Sie ein oder mehrere Flurstücke auf der Karte</h5>
+                            <h5 class="m-0 mx-center">Wählen Sie Flurstücke auf der Karte aus</h5>
                         </div>
                     </div>
                 </ng-template>
