required annotation + translation

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -138,6 +138,12 @@
 
     <div class="container-fluid">
         <footer class="pt-4 my-md-5 pt-md-5 border-top w-100 m-0 overflow-hidden">
+            <div class="row justify-content-end">
+                <div class="col-md-4 text-right">
+                    <p class="text-muted"
+                       i18n>* Pflichtfeld</p>
+                </div>
+            </div>
             <div class="row justify-content-around">
                 <div class="col-md-4 text-center">
                     <div class="h5"
