--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -111,6 +111,8 @@
 
             <!-- modal buttons -->
             <div class="modal-footer">
+                <label class="mr-auto text-muted"
+                        i18n>* Pflichtfeld</label>
                 <button type="button"
                         class="btn btn-success"
                         i18n-title
