Nipix: Typo: Indexreihenberechnung

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -6,7 +6,7 @@
              (chartDataZoom)="onDataZoom($event)" (chartClick)="chartClicked($event)"
              (chartFinished)="onChartFinished($event)" class="demo-chart chart-graph"></div>
         <div style="text-align: center;" [ngStyle]="{'font-size': nipixStatic.textOptions.fontSizePage+'rem'}">HINWEIS:
-            Das Basisjahr der Indexreihenberechung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern
+            Das Basisjahr der Indexreihenberechnung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern
             dynamisch anpassen.
         </div>
     </div>
