Nipix: Typo: Allgemeinen Geschäfts...

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -194,8 +194,8 @@
 
         </ngb-accordion>
         <div style="text-align: center; margin-top: 1rem;">
-            Es gelten die <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noreferrer">Allgemeine Geschäfts- und
-            Nutzungsbedingungen (AGNB)</a>
+            Es gelten die <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noreferrer">Allgemeinen Geschäfts- und
+            Nutzungsbedingungen (AGNB)</a>.
         </div>
     </div>
 </div>
