Nipix: Typo: Wohnungsmarktregion

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -187,7 +187,7 @@
                         #searchWoMaReg="ngbTypeahead"
                         >
                     <hr>
-                    Ihre Wohnungsmarkregion: {{ regionName(nipixStatic.data.gemeinden[model]) | json }}
+                    Ihre Wohnungsmarktregion: {{ regionName(nipixStatic.data.gemeinden[model]) | json }}
 
                 </ng-template>
             </ngb-panel>
