Nipix: Typo: ihre Gemeinde

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -175,7 +175,7 @@
                     Zu welcher Wohnungsmarktregion gehört meine Gemeinde?
                 </ng-template>
                 <ng-template ngbPanelContent>
-                    <label for="typeahead-focus">Suchen Sie Ihre Gemeinde:</label>
+                    <label for="typeahead-focus">Suchen Sie ihre Gemeinde:</label>
                     <input
                         id="typeahead-focus"
                         type="text"
