--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -158,8 +158,8 @@
                                     style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;"
                                     [style.background-color]="nipixRuntime.getDrawPreset(itm).colors"></span>
                                 {{ itm }}
-                                <i-bs name="house-fill" *ngIf="itm == 'Eigenheime'" aria-hidden="true"></i-bs>
-                                <i-bs name="building" *ngIf="itm == 'Eigentumswohnungen'" aria-hidden="true"></i-bs>
+                                <i-bs name="house-fill" *ngIf="itm == 'gebrauchte Eigenheime'" aria-hidden="true"></i-bs>
+                                <i-bs name="building" *ngIf="itm == 'gebrauchte Eigentumswohnungen'" aria-hidden="true"></i-bs>
                                 ({{ nipixStatic.data.shortNames[itm] }})</span>
                         </li>
                     </ul>
