Nipix: Abstand unter Vergleiche-Dropdown hinzugefügt

--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -53,7 +53,7 @@
                     </div>
 
                     <!-- MultiSelect -->
-                    <div ngbDropdown class="d-inline-block btn-block " *ngIf="select['type'] == 'multiSelect'">
+                    <div ngbDropdown class="d-inline-block btn-block" style="margin-bottom: 1rem;" *ngIf="select['type'] == 'multiSelect'">
                         <button class="btn btn-block shadow-sm bg-white" id="dropdownVergleich-{{select['name']}}"
                                 type="button" ngbDropdownToggle>
                             {{ (select['selected']) }} Vergleiche
