--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -85,7 +85,7 @@
                                     </span>
                                 </ng-container>
 
-                                <span>
+                                <span class="dotlabel" style="padding-left: 0.5rem;">
                                     <i-bs name="house-fill"
                                           *ngIf="f == 'gebrauchte Eigenheime'"
                                           aria-hidden="true">
@@ -111,14 +111,16 @@
                                         <label for="{{i}}vall" style="margin-bottom: 0;" class="custom-control-label">
                                         </label>
                                     </span>
-                                    <span
+                                    <span class="dotlabel" style="vertical-align: middle;"
                                         *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length == 0">alle auswählen</span>
-                                    <span
+                                    <span class="dotlabel" style="vertical-align: middle;"
                                         *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length > 0">Auswahl aufheben</span>
                                 </ng-container>
                             </ng-container>
                             <ng-container *ngIf="select['type'] == 'multiSelect'">
-                                alle/keine auswählen
+                                <span class="dotlabel" style="padding-left: 0.5rem; vertical-align:middle;">
+                                    alle/keine auswählen
+                                </span>
                             </ng-container>
 
                         </li>
@@ -136,11 +138,15 @@
                                            class="custom-control-label"></label>
                                 </span>
                             </ng-container>
-                            <span
-                                style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;"
-                                [style.background-color]="nipixRuntime.formatter.getSeriesColor(subitem)"
-                                *ngIf="select['type'] == 'single'"></span>
-                            {{ nipixRuntime.formatter.getSeriesLabel(subitem) }}
+                            <span class="dot">
+                                <span
+                                  style="display: inline-block; border-radius: 10px; width: 10px; height: 10px;"
+                                  [style.background-color]="nipixRuntime.formatter.getSeriesColor(subitem)"
+                                  *ngIf="select['type'] == 'single'"></span>
+                            </span>
+                            <span class="dotlabel">
+                                {{ nipixRuntime.formatter.getSeriesLabel(subitem) }}
+                            </span>
                         </li>
                     </ul>
 
@@ -153,14 +159,17 @@
                                        (change)="onToggleDrawRoot(itm)">
                                 <label for="{{itm}}" class="custom-control-label"></label>
                             </span>
-                            <span (click)="onClickDrawRoot(itm)">
+                            <span (click)="onClickDrawRoot(itm)" class="dot">
                                 <span
-                                    style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;"
+                                    style="display: inline-block; border-radius: 10px; width: 10px; height: 10px;"
                                     [style.background-color]="nipixRuntime.getDrawPreset(itm).colors"></span>
+                            </span>
+                            <span (click)="onClickDrawRoot(itm)" class="dotlabel">
                                 {{ itm }}
                                 <i-bs name="house-fill" *ngIf="itm == 'gebrauchte Eigenheime'" aria-hidden="true"></i-bs>
                                 <i-bs name="building" *ngIf="itm == 'gebrauchte Eigentumswohnungen'" aria-hidden="true"></i-bs>
-                                ({{ nipixStatic.data.shortNames[itm] }})</span>
+                                ({{ nipixStatic.data.shortNames[itm] }})
+                            </span>
                         </li>
                     </ul>
 
