Implementation of umlaut correction including unit tests

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <h5 class="card-header">
-        {{feature.properties.brzname}}
+        {{feature.properties.brzname | umlautCorrection}}
         {{feature.properties.wnum}}
     </h5>
     <div class="card-body">
