--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -235,7 +235,7 @@
 
     <!-- tasks list -->
     <div class="card bg-light"
-         *ngIf="storage.form.status !== 'created'">
+         *ngIf="data">
         <div class="card-header h5">
             <svg width="1em"
                  height="1em"
@@ -278,7 +278,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let task of storage.tasksList; index as i">
+                    <tr *ngFor="let task of data; index as i">
                         <td>{{ task.id }}</td>
                         <td *ngIf="storage.form.access !== 'public'">
                             <a [routerLink]="['/forms/fillout', task.pin]"
@@ -426,7 +426,32 @@
             </button>
 
             <!-- Tasks Pagination -->
-            <div class="navigation">
+            <div class="card-footer">
+                <div class="float-right">
+                    <div class="form-inline well">
+                        <div class="form-group mx-2">
+                            <select class="custom-select"
+                                    (change)="taskPerPage = $event.target.value; updateTasks(false)">
+                                <option *ngFor=" let size of taskPageSizes">
+                                    {{ size }}
+                                </option>
+                            </select>
+                        </div>
+                        <pagination [boundaryLinks]="true"
+                                    [itemsPerPage]="taskPerPage"
+                                    [maxSize]="10"
+                                    [totalItems]="taskTotal"
+                                    (pageChanged)="taskPage = $event.page; updateTasks(false)"
+                                    previousText="&lsaquo;"
+                                    nextText="&rsaquo;"
+                                    firstText="&laquo;"
+                                    lastText="&raquo;">
+                        </pagination>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="navigation">
                 <pagination [boundaryLinks]="true"
                             [itemsPerPage]="storage.tasksPerPage"
                             [maxSize]="10"
@@ -437,7 +462,7 @@
                             firstText="&laquo;"
                             lastText="&raquo;">
                 </pagination>
-            </div>
+            </div> -->
         </div>
     </div>
 </main>
