--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -28,7 +28,7 @@
     <div class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
             <h2 class="font-weight-normal"
-                i18n>Fragebogen</h2>
+                i18n>Online Formulare</h2>
             <a class="btn btn-danger"
                [routerLink]="['/forms']"
                i18n>Zur Anwendung</a>
