Added Pagination in details.component

--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -439,7 +439,7 @@
                     <pagination [boundaryLinks]="true"
                                 [itemsPerPage]="taskPerPage"
                                 [maxSize]="10"
-                                [totalItems]="taskTotal"
+                                [totalItems]="storage.tasksCountTotal"
                                 (pageChanged)="taskPage = $event.page; updateTasks(false)"
                                 previousText="&lsaquo;"
                                 nextText="&rsaquo;"
