--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -2,7 +2,7 @@
 <main class="mainpage p-1 p-lg-3"
       id="content"
       tabindex="-1"
-      *ngIf="storage.form">
+      *ngIf="data.form">
     <!-- title -->
     <div class="h4">
         <svg width="1em"
@@ -18,7 +18,7 @@
             <path fill-rule="evenodd"
                   d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
         </svg>
-        {{ storage.form.title }}
+        {{ data.form.title }}
 
         <button type="button"
                 class="btn btn-secondary btn-sm float-right d-none d-md-inline"
@@ -47,41 +47,41 @@
     <div class="row m-0 mb-3">
         <div class="col-12 col-md-6 pl-0">
             <p class="font-weight-light mb-1">
-                <span i18n>ID</span>: {{ storage.form.id }}
+                <span i18n>ID</span>: {{ data.form.id }}
             </p>
             <p class="font-weight-light mb-1">
-                <span i18n>Erstellt</span>: {{ storage.form.created | date:'short' }}
+                <span i18n>Erstellt</span>: {{ data.form.created | date:'short' }}
             </p>
             <p class="font-weight-light mb-1"
-               *ngIf="storage.form.published">
-                <span i18n>Veröffentlicht</span>: {{ storage.form.published | date:'short' }}
+               *ngIf="data.form.published">
+                <span i18n>Veröffentlicht</span>: {{ data.form.published | date:'short' }}
             </p>
             <p class="font-weight-light mb-1"
-               *ngIf="storage.form.cancelled">
-                <span i18n>Archiviert</span>: {{ storage.form.cancelled | date:'short' }}
+               *ngIf="data.form.cancelled">
+                <span i18n>Archiviert</span>: {{ data.form.cancelled | date:'short' }}
             </p>
             <p class="font-weight-light mb-1"
-               *ngIf="storage.form.status === 'published'">
-                <span i18n>Zugriff</span>: {{ storage.form.access }}
+               *ngIf="data.form.status === 'published'">
+                <span i18n>Zugriff</span>: {{ data.form.access }}
             </p>
-            <!--<p class="font-weight-light mb-1" *ngIf="storage.form.status === 'published'">
-                      Zugriffszeit</span>: {{ storage.form['access-minutes'] }} Minuten
+            <!--<p class="font-weight-light mb-1" *ngIf="data.form.status === 'published'">
+                      Zugriffszeit</span>: {{ data.form['access-minutes'] }} Minuten
                   </p>-->
         </div>
         <div class="col-12 col-md-6 pl-0">
             <p class="font-weight-light mb-1">
-                <span i18n>Status</span>: {storage.form.status, select, created {Erstellt} published {Veröffentlicht}
+                <span i18n>Status</span>: {data.form.status, select, created {Erstellt} published {Veröffentlicht}
                 cancelled
                 {Geschlossen}}
             </p>
             <p class="font-weight-light mb-1">
-                <span i18n>Besitzer</span>: {{ storage.form.owners }}
+                <span i18n>Besitzer</span>: {{ data.form.owners }}
             </p>
             <p class="font-weight-light mb-1">
-                <span i18n>Leser</span>: {{ storage.form.readers }}
+                <span i18n>Leser</span>: {{ data.form.readers }}
             </p>
             <p class="font-weight-light mb-1">
-                <span i18n>Tags</span>: {{ storage.form.tags }}
+                <span i18n>Tags</span>: {{ data.form.tags }}
             </p>
         </div>
         <div class="col-12 pl-0 pt-2">
@@ -89,8 +89,8 @@
                     class="btn btn-primary btn-sm mr-2"
                     i18n-title
                     title="Formular bearbeiten"
-                    [routerLink]="['/forms/editor', storage.form.id]"
-                    *ngIf="storage.form.status === 'created' && (!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email))">
+                    [routerLink]="['/forms/editor', data.form.id]"
+                    *ngIf="data.form.status === 'created' && (!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email))">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -157,7 +157,7 @@
                     i18n-title
                     title="Formular Einstellungen"
                     (click)="settings.open()"
-                    *ngIf="!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email)">
+                    *ngIf="!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email)">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -178,7 +178,7 @@
                     i18n-title
                     title="Formular veröffentlichen"
                     (click)="publish.open()"
-                    *ngIf="storage.form.status === 'created' && (!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email))">
+                    *ngIf="data.form.status === 'created' && (!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email))">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -197,7 +197,7 @@
                     i18n-title
                     title="Formular archivieren"
                     (click)="archiveForm()"
-                    *ngIf="storage.form.status === 'published' && (!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email))">
+                    *ngIf="data.form.status === 'published' && (!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email))">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -216,7 +216,7 @@
                     i18n-title
                     title="Formular löschen"
                     (click)="deleteForm()"
-                    *ngIf="storage.form.status !== 'published' && (!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email))">
+                    *ngIf="data.form.status !== 'published' && (!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email))">
                 <svg width="1em"
                      height="1em"
                      viewBox="0 0 16 16"
@@ -235,7 +235,7 @@
 
     <!-- tasks list -->
     <div class="card bg-light"
-         *ngIf="storage.tasksList">
+         *ngIf="data.tasksList">
         <div class="card-header h5">
             <svg width="1em"
                  height="1em"
@@ -259,7 +259,7 @@
                             i18n>ID</th>
                         <th scope="col"
                             class="border-top-0"
-                            *ngIf="storage.form.access !== 'public'"
+                            *ngIf="data.form.access !== 'public'"
                             i18n>PIN</th>
                         <th scope="col"
                             class="border-top-0"
@@ -278,9 +278,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let task of storage.tasksList; index as i">
+                    <tr *ngFor="let task of data.tasksList; index as i">
                         <td>{{ task.id }}</td>
-                        <td *ngIf="storage.form.access !== 'public'">
+                        <td *ngIf="data.form.access !== 'public'">
                             <a [routerLink]="['/forms/fillout', task.pin]"
                                *ngIf="task.status !== 'submitted'">
                                 {{ task.pin }}
@@ -358,7 +358,7 @@
                                     i18n-title
                                     title="Antwort löschen"
                                     (click)="deleteTask(i)"
-                                    *ngIf="!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email)">
+                                    *ngIf="!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email)">
                                 <svg width="1em"
                                      height="1em"
                                      viewBox="0 0 16 16"
@@ -377,7 +377,7 @@
                 </tbody>
             </table>
             <span class="m-3"
-                  *ngIf="!storage.tasksList.length"
+                  *ngIf="!data.tasksList.length"
                   i18n>Keine Antworten vorhanden</span>
         </div>
 
@@ -387,7 +387,7 @@
                     i18n-title
                     title="Neue PIN erstellen"
                     (click)="maketask.open()"
-                    *ngIf="storage.form.status === 'published' && storage.form.access !== 'public' && (!auth.IsAuthEnabled() || storage.form.owners.includes(auth.user.data.email))">
+                    *ngIf="data.form.status === 'published' && data.form.access !== 'public' && (!auth.IsAuthEnabled() || data.form.owners.includes(auth.user.data.email))">
                 <svg width="1.5em"
                      height="1.5em"
                      viewBox="0 0 16 16"
@@ -439,7 +439,7 @@
                     <pagination [boundaryLinks]="true"
                                 [itemsPerPage]="taskPerPage"
                                 [maxSize]="10"
-                                [totalItems]="storage.tasksCountTotal"
+                                [totalItems]="data.tasksCountTotal"
                                 (pageChanged)="taskPage = $event.page; updateTasks(false)"
                                 previousText="&lsaquo;"
                                 nextText="&rsaquo;"
@@ -453,7 +453,7 @@
 </main>
 
 <!-- new task modal -->
-<power-forms-details-maketask #maketask></power-forms-details-maketask>
+<power-forms-details-maketask #maketask [(data)]="data"></power-forms-details-maketask>
 
 <!-- publish modal -->
 <power-forms-details-publish #publish></power-forms-details-publish>
@@ -462,8 +462,8 @@
 <power-forms-details-comment #comment></power-forms-details-comment>
 
 <!-- preview modal -->
-<power-forms-surveyjs-preview *ngIf="storage.form"
-                              [form]="storage.form.content"
+<power-forms-surveyjs-preview *ngIf="data.form"
+                              [form]="data.form.content"
                               #preview>
 </power-forms-surveyjs-preview>
 
