BORIS: Copyright notice and cleaned up assets dir

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -114,7 +114,7 @@
         [style]="MAP_STYLE_URL"
         [trackResize]="true">
 
-        <mgl-geojson-source id="ndsgeojson" [data]="baseUrl+'/assets/niedersachsen.geojson'"></mgl-geojson-source>
+        <mgl-geojson-source id="ndsgeojson" [data]="baseUrl+'/assets/boden/niedersachsen.geojson'"></mgl-geojson-source>
 
         <mgl-layer
             id="nds"
