BORIS: Fixed waste of space (nested padding)

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -30,6 +30,6 @@
         </ngb-panel>
     </ngb-accordion>
     <div class="row m-1 pt-3" [class.d-none]="!features">
-        <power-bodenrichtwert-verlauf class="col-md-12" [features]="features"></power-bodenrichtwert-verlauf>
+        <power-bodenrichtwert-verlauf class="col-md-12 p-0" [features]="features"></power-bodenrichtwert-verlauf>
     </div>
 </div>
